--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       body{
         background-image: url(./images/bg-pattern-top-desktop.svg),url(./images/bg-pattern-bottom-desktop.svg);
         background-repeat: no-repeat,no-repeat;
+        background-size: auto, auto;
         background-position: right 60vw bottom 65vh, left 20vw top 20vh;
       }
       @media screen and (max-width: 965px){
         body{
           background-image: url(./images/bg-pattern-top-mobile.svg),url(./images/bg-pattern-bottom-mobile.svg);
           background-repeat: no-repeat,no-repeat;
+          background-size: auto, auto;
           background-position: right 100% bottom 100%, left 100% top 100%;
         }
       }
